# iDaVIE

./: .gitignore  .gitmodules  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Configure.ps1  DEVELOP.md  DISCLAIMER.md  LICENSE.md  NOTICE  NOTICE.md  README.md  THIRD-PARTY-LICENSES  actions.json  benchmark_analysis.ipynb  bindings_holographic_controller.json  bindings_knuckles.json  bindings_oculus_touch-bk.json  bindings_oculus_touch.json  bindings_vive_controller.json  build.bat  build.ps1  configure.ps1  unityProject.vrmanifest
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  fits-issue.md  idavie-bug.md
.github/workflows/: build-iDaVIE-v-on-push.yml
Assets/: BenchmarkManager.cs  ButtonHoverBehaviour.cs  CubeBenchmark.cs  FeatureSet.cs  FeatureSetManager.cs  FeatureSetRenderer.cs  MenuBarBehaviour.cs  PackageImporter.cs  SourceRow.cs  SpectatorMovement.cs  SpectralProfileHelper.cs  VoiceCommandIndicator.cs  index.html  packages.config
Assets/Editor/: VolumeDataSetEditor.cs
Assets/Materials/: AnchorMaterial.mat  BasicLine.mat  DomeMat.mat  Iziko_CapeTown_DD_2016-09-27-Plan-1.mat  ParticlePoint.mat  PlaneMaterial.mat  RayMarchedVolume.mat  VolumeMask.mat  m31.mat
Assets/Prefabs/: Colorbar.prefab  ColorbarPrefab.prefab  CubePrefab.prefab  CubePrefabWithSpectator.prefab  CubeShape.prefab  CuboidShape.prefab  CylinderShape.prefab  DatasetManager.prefab  FeatureSetRenderer.prefab  FloatingMenu.prefab  Keypad.prefab  LeftRenderModelControllerOnly.prefab  Player.prefab  PointDataSetManager.prefab  PopUpButton.prefab  Recyclable Scroll View.prefab  RightRenderModelControllerOnly.prefab  SliceCameraZ.prefab  SliceQuad.prefab  SofiaListCellPrefab.prefab  SofiaListElementPrefab 1 1.prefab  SofiaNewListElement.prefab  SphereShape.prefab  SurfaceGenerator.prefab  TickPrefab.prefab  ToastNotification.prefab  UserConfirmationPopup.prefab  VRKeyboard_InputField.prefab  VRkeyboard_v1.0_conTastoVocale.prefab  VoiceCommandListElement.prefab  VolumePlayer.prefab
Assets/Prefabs/DesktopGUI/: MarkerPrefab.prefab  SourceRow.prefab
Assets/Prefabs/FeatureSet/: Feature.prefab  FeatureAnchor.prefab  (+5 more)
Assets/Resources/: CatalogLine.mat  CatalogPoint.mat  MomentMapGenerator.compute
Assets/Scenes/: basic_scene.unity  benchmark.unity  catalogs.unity  catalogs_sample.unity  demo.unity  dome_scene.unity  isosurfaces.unity  spectator.unity  ui.unity  ui222.unity  uiSettings.lighting  ui_BACKUP_1570.unity  ui_BASE_1570.unity  ui_LOCAL_1652.unity  ui_OLD.unity  ui_REMOTE_1652.unity  volumes.unity  volumes_sample.unity
Assets/Scripts/: BenchmarkManager.cs  CatalogInputController.cs  ColorMapEnum.cs  CubeLoadProfiler.cs  CustomDragHandler.cs  DataAnalysis.cs  DebugCpp.cs  FitsReader.cs  HistogramHelper.cs  InputController.cs  NativePluginLoader.cs  PointDataSet.cs  SofiaListCreator.cs  SofiaListItem.cs  SofiaNewListController.cs  SofiaNewListItem.cs  SurfaceGenerator.cs  VoiceCommandListCreator.cs  VoiceCommandListItem.cs  VolumeDataSet.cs  VolumeInputController.cs  WCSUtil.cs
Assets/Shaders/: BasicVolume.cginc  BasicVolume.shader  ParticlePoint.cginc  ParticlePoint.shader  UbuntuMono-Regular.asset  VideoWatermark.shader
Assets/Textures/: VideoCamera.renderTexture  billboard_textures.TGA
Assets/UI/: VideoCamera.renderTexture  VrMap.renderTexture  VrSlice.renderTexture
Assets/XR/: XRGeneralSettings.asset
Data/DataFeatures/: sofia_list.json
Data/DataMaps/: basicxyz.json  feature_mapping_schema.json
Data/SampleData/: test_catalog.fits  test_catalog.fits.json  test_featureset.ascii  test_featureset.xml  test_volume.fits
Logs/: ApiUpdaterCheck.txt
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  TagManager.asset
Scripts/: readme.txt
lib_source/data_analysis_tool/: DebugCpp.cpp  DebugCpp.h  data_analysis_tool.sln  data_analysis_tool.vcxproj  main.cpp
lib_source/fits_reader/: fits_reader.sln  fits_reader.vcxproj  main.cpp
native_plugins/: native_plugins.sln
native_plugins/VOTableParser/: Coosys.cpp  Coosys.h  Field.h  FieldParam.cpp  Group.h  Info.h  InvalidDataException.cpp  Link.cpp  Param.cpp  ParamRef.cpp  Row.h  Stream.cpp  TableData.cpp  TableData.h  VOTableParser.vcxproj  VOTableParser.vcxproj.filters  VOUtils.cpp  VTable.cpp  Values.cpp  Values.h
native_plugins/data_analysis_tool/: data_analysis_tool.vcxproj  data_analysis_tool.vcxproj.filters  main.cpp
native_plugins/fits_reader/: fits_reader.vcxproj  main.cpp
native_plugins/votable_reader/: votable_reader.cpp  votable_reader.h  votable_reader.vcxproj  votable_reader.vcxproj.filters
native_plugins_cmake/: .gitignore  CMakeLists.txt  ast_tool.cpp  ast_tool.h  cdl_zscale.cc  cdl_zscale.h  data_analysis_tool.cpp  data_analysis_tool.h  fits_reader.cpp  fits_reader.h
native_plugins_cmake/DebugCpp/: CMakeLists.txt  DebugCpp.cpp
native_plugins_cmake/ast_tool/: .gitignore  CMakeLists.txt  ast_cpp.in  ast_tool.cpp  ast_tool.h  makeh
native_plugins_cmake/data_analysis_tool/: CMakeLists.txt  data_analysis_tool.cpp  data_analysis_tool.h
native_plugins_cmake/fits_reader/: CMakeLists.txt  DebugCpp.cpp  fits_reader.cpp  fits_reader.h
native_plugins_cmake/mingw-w64-cfitsio/: .gitignore  PKGBUILD  large_file_cmake.patch
native_plugins_cmake/votable_reader/: CMakeLists.txt  votable_reader.cpp  votable_reader.h
native_plugins_cmake/votable_reader/VOTableParser/: BinaryData.cpp  BinaryData.h  Column.cpp  Column.h  DatatypeMismatchException.cpp  DatatypeMismatchException.h  Field.cpp  FieldParam.h  FieldParamRef.cpp  FieldParamRef.h  FieldRef.cpp  FieldRef.h  FitsData.cpp  FitsData.h  Group.cpp  Info.cpp  InternalConstants.h  InvalidDataException.h  Link.h  MissingValueException.cpp  MissingValueException.h  Option.cpp  Option.h  Param.h  ParamRef.h  Range.cpp  Range.h  Resource.cpp  Resource.h  Row.cpp  Stream.h  TableMetaData.cpp  TableMetaData.h  TestVOParser.cpp  VOUtils.h  VTable.h  XPathHelper.cpp  XPathHelper.h  error.cpp  error.h  (+1 more)
plugin_build/: textMeshPro-3.0.6.unitypackage
(+165 files in other folders)
