add_library(data_analysis_tool SHARED data_analysis_tool.cpp data_analysis_tool.h cdl_zscale.cc)
target_link_options(data_analysis_tool PUBLIC "-static-libgcc" "-static-libstdc++")
set_target_properties(data_analysis_tool PROPERTIES CXX_STANDARD 17)

find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(data_analysis_tool PUBLIC OpenMP::OpenMP_CXX)
endif()
find_file(OPENMP_DLL libgomp-1.dll)
find_file(SEH_DLL libgcc_s_seh-1.dll)
find_file(PTHREAD_DLL libwinpthread-1.dll)
